--- a/templates/component-style.ejs
+++ b/templates/component-style.ejs
@@ -1,5 +1,5 @@
 import { StyleSheet } from 'react-native'
-import { Colors, Metrics, ApplicationStyles } from '../../Themes/'
+import { Metrics } from '../../Themes/'
 
 export default StyleSheet.create({
   container: {
