set up oauth2 and uaa auth
Fix #3
Fix #4

--- a/boilerplate/App/Config/AppConfig.js.ejs
+++ b/boilerplate/App/Config/AppConfig.js.ejs
@@ -2,5 +2,14 @@
 
 export default {
   // font scaling override - RN default is on
-  allowTextFontScaling: true
+  allowTextFontScaling: true,
+  apiUrl: 'http://localhost:8080/'<%_ if (props.authType ==='oauth2') { _%>,
+  oauthClientId: 'jhipsterapp',
+  oauthClientSecret: 'my-secret-token-to-change-in-production'
+  <%_  } else if (props.authType ==='uaa') { _%>,
+  oauthClientId: 'web_app',
+  oauthClientSecret: '',
+  uaaBaseUrl: 'uaa/'
+  <%_  } _%>
+
 }
