--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -41,6 +41,7 @@
     "ava": "^0.18.2",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
+    "buffer": "^5.0.5",
     "enzyme": "^2.6.0",
     "mockery": "^2.0.0",
     "husky": "^0.13.1",
