--- a/boilerplate/App/Redux/LoginRedux.js.ejs
+++ b/boilerplate/App/Redux/LoginRedux.js.ejs
@@ -28,13 +28,9 @@ export const request = (state) => state.merge({ fetching: true })
 
 // we've successfully logged in
 export const success = (state, data) => {
-  <%_ if (props.authType === 'oauth2') { _%>
+  <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
   jhipsterApi.setAuthToken(data.id_token.access_token)
   return state.merge({ fetching: false, error: null, id_token: data.id_token })
-  <%_ } else if (props.authType === 'uaa') { _%>
-  const { id_token } = data.id_token
-  jhipsterApi.setAuthToken(id_token)
-  return state.merge({ fetching: false, error: null, id_token })
   <%_ } else if (props.authType === 'jwt') { _%>
   const { id_token } = data.id_token
   jhipsterApi.setAuthToken(id_token)
