polish login pattern
move all action calls to the saga
add logout saga for uaa/oauth
clear the account and token in logout saga
remove uaa path from account api

--- a/boilerplate/App/Redux/LoginRedux.js.ejs
+++ b/boilerplate/App/Redux/LoginRedux.js.ejs
@@ -1,14 +1,13 @@
 import { createReducer, createActions } from 'reduxsauce'
 import Immutable from 'seamless-immutable'
-import { jhipsterApi } from '../Sagas'
-import AccountActions from './AccountRedux'
 /* ------------- Types and Action Creators ------------- */
 
 const { Types, Creators } = createActions({
   loginRequest: ['username', 'password'],
   loginSuccess: ['id_token'],
   loginFailure: ['error'],
-  logout: null
+  logoutRequest: null,
+  logoutSuccess: null
 })
 
 export const LoginTypes = Types
@@ -30,27 +29,20 @@ export const request = (state) => state.merge({ fetching: true })
 // we've successfully logged in
 export const success = (state, data) => {
   <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-  jhipsterApi.setAuthToken(data.id_token.access_token)
-  AccountActions.accountRequest()
   return state.merge({ fetching: false, error: null, id_token: data.id_token })
   <%_ } else if (props.authType === 'jwt') { _%>
   const { id_token } = data.id_token
-  jhipsterApi.setAuthToken(id_token)
-  AccountActions.accountRequest()
   return state.merge({ fetching: false, error: null, id_token })
   <%_ } _%>
-
 }
 // we've had a problem logging in
-export const failure = (state, { error }) =>
-  state.merge({ fetching: false, error })
+export const failure = (state, { error }) => state.merge({ fetching: false, error })
+
+// we need to logout, meaning clear access tokens and account
+export const logoutRequest = state => state
 
 // we've logged out
-export const logout = state => {
-  jhipsterApi.removeAuthToken()
-  AccountActions.logout()
-  return INITIAL_STATE
-}
+export const logoutSuccess = state => INITIAL_STATE
 
 /* ------------- Hookup Reducers To Types ------------- */
 
@@ -58,7 +50,8 @@ export const reducer = createReducer(INITIAL_STATE, {
   [Types.LOGIN_REQUEST]: request,
   [Types.LOGIN_SUCCESS]: success,
   [Types.LOGIN_FAILURE]: failure,
-  [Types.LOGOUT]: logout
+  [Types.LOGOUT_REQUEST]: logoutRequest,
+  [Types.LOGOUT_SUCCESS]: logoutSuccess
 })
 
 /* ------------- Selectors ------------- */
