--- a/boilerplate/App/Redux/LoginRedux.js.ejs
+++ b/boilerplate/App/Redux/LoginRedux.js.ejs
@@ -7,7 +7,9 @@ const { Types, Creators } = createActions({
   loginSuccess: ['id_token'],
   loginFailure: ['error'],
   logoutRequest: null,
-  logoutSuccess: null
+  logoutSuccess: null,
+  loginLoad: [],
+  loginLoadSuccess: []
 })
 
 export const LoginTypes = Types
@@ -18,7 +20,8 @@ export default Creators
 export const INITIAL_STATE = Immutable({
   id_token: null,
   error: null,
-  fetching: false
+  fetching: false,
+  loading: false
 })
 
 /* ------------- Reducers ------------- */
@@ -28,12 +31,7 @@ export const request = (state) => state.merge({ fetching: true })
 
 // we've successfully logged in
 export const success = (state, data) => {
-  <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
   return state.merge({ fetching: false, error: null, id_token: data.id_token })
-  <%_ } else if (props.authType === 'jwt') { _%>
-  const { id_token } = data.id_token
-  return state.merge({ fetching: false, error: null, id_token })
-  <%_ } _%>
 }
 // we've had a problem logging in
 export const failure = (state, { error }) => state.merge({ fetching: false, error })
@@ -44,6 +42,11 @@ export const logoutRequest = state => state
 // we've logged out
 export const logoutSuccess = state => INITIAL_STATE
 
+// we're attempting to load token from startup sagas
+export const load = (state) => state.merge({ loading: true })
+
+export const loadSuccess = (state) => state.merge({ loading: false })
+
 /* ------------- Hookup Reducers To Types ------------- */
 
 export const reducer = createReducer(INITIAL_STATE, {
@@ -51,7 +54,9 @@ export const reducer = createReducer(INITIAL_STATE, {
   [Types.LOGIN_SUCCESS]: success,
   [Types.LOGIN_FAILURE]: failure,
   [Types.LOGOUT_REQUEST]: logoutRequest,
-  [Types.LOGOUT_SUCCESS]: logoutSuccess
+  [Types.LOGOUT_SUCCESS]: logoutSuccess,
+  [Types.LOGIN_LOAD]: load,
+  [Types.LOGIN_LOAD_SUCCESS]: loadSuccess
 })
 
 /* ------------- Selectors ------------- */
