--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -35,7 +35,8 @@
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
     "reduxsauce": "0.4.1",
-    "seamless-immutable": "^7.0.1"
+    "seamless-immutable": "^7.0.1",
+    "tcomb-form-native": "^0.6.7"
   },
   "devDependencies": {
     "ava": "^0.18.2",
