set up reset/change password screens
set up forms for both screens
refactors ForgotPasswordRedux into generic PasswordRedux
add api endpoints

--- a/boilerplate/App/Services/JhipsterApi.js.ejs
+++ b/boilerplate/App/Services/JhipsterApi.js.ejs
@@ -53,10 +53,11 @@ const create = (baseURL = AppConfig.apiUrl) => {
   const login = (userAuth) => api.post('api/authenticate', userAuth)
   <%_ } _%>
   const register = (user) => api.post(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/register', user)
-  const forgotPasswordRequest = (data) => api.post(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/account/reset_password/init', data, {headers: {'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*'}})
+  const forgotPassword = (data) => api.post(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/account/reset_password/init', data, {headers: {'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*'}})
 
   const getAccount = () => api.get(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/account')
   const updateAccount = (account) => api.post(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/account', account)
+  const changePassword = (newPassword) => api.post(<%_ if (props.authType === 'uaa') { _%>AppConfig.uaaBaseUrl + <%_ } _%>'api/account/change_password', newPassword, {headers: {'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*'}})
 
   // ------
   // STEP 3
@@ -76,9 +77,10 @@ const create = (baseURL = AppConfig.apiUrl) => {
     removeAuthToken,
     login,
     register,
-    forgotPasswordRequest,
+    forgotPassword,
     getAccount,
-    updateAccount
+    updateAccount,
+    changePassword
   }
 }
 
