lint app, improve form ux

--- a/boilerplate/Tests/Setup.js.ejs
+++ b/boilerplate/Tests/Setup.js.ejs
@@ -23,12 +23,10 @@ mockery.registerMock('reactotron-redux', {})
 mockery.registerMock('reactotron-apisauce', {})
 <%_ if (props.animatable === 'react-native-animatable') { _%>
 mockery.registerMock('react-native-animatable', {View: 'Animatable.View'})
-<%_ } _%>
-<%_ if (props.vectorIcons === 'react-native-vector-icons') { _%>
+<%_ } _%><%_ if (props.vectorIcons === 'react-native-vector-icons') { _%>
 mockery.registerMock('react-native-vector-icons/Ionicons', {})
 <%_ } _%>
 mockery.registerMock('react-native-router-flux', {Actions: {'myScreen': () => {}}, ActionConst: {RESET: 'reset'}})
-
 <%_ if (props.i18n === 'react-native-i18n') { _%>
 // Mock i18n as it uses react native stuff
 // This mock returns the interpolated text from the english.json file in App/I18n
@@ -48,7 +46,6 @@ mockery.registerMock('react-native-i18n', {
   }
 })
 <%_ } _%>
-
 // Mock all images for React Native
 const originalLoader = m._load
 m._load = (request, parent, isMain) => {
