--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -6,7 +6,6 @@ export const selectAuthToken = (state) => state.login.id_token
 
 // attempts to login
 export function * login (api, { username, password }) {
-
   <%_ if (props.authType === 'oauth2') { _%>
   const authObj = 'username=' + username + '&password=' + password + '&grant_type=password&scope=read%20write'
   <%_} else if (props.authType === 'uaa') { _%>
@@ -23,15 +22,14 @@ export function * login (api, { username, password }) {
 
   // success?
   if (response.ok) {
-    console.tron.log("Login - OK")
+    console.tron.log('Login - OK')
     yield call(api.setAuthToken, response.data.id_token<%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>.access_token<%_ } %>)
     yield put(LoginActions.loginSuccess(response.data.id_token))
     yield put(AccountActions.accountRequest())
   } else {
-    console.tron.log("Login - FAIL")
+    console.tron.log('Login - FAIL')
     yield put(LoginActions.loginFailure('WRONG'))
   }
-
 }
 
 // attempts to logout
