--- a/templates/listview-sections.ejs
+++ b/templates/listview-sections.ejs
@@ -66,13 +66,13 @@ class ListviewSectionsExample extends React.Component {
 
   /* ***********************************************************
   * STEP 3
-  * `_renderRow` function -How each cell/row should be rendered
+  * `renderRow` function -How each cell/row should be rendered
   * It's our best practice to place a single component here:
   *
   * e.g.
     return <MyCustomCell title={rowData.title} description={rowData.description} />
   *************************************************************/
-  _renderRow (rowData, sectionID) {
+  renderRow (rowData, sectionID) {
     // You can condition on sectionID (key as string), for different cells
     // in different sections
     return (
@@ -103,11 +103,11 @@ class ListviewSectionsExample extends React.Component {
 
   // Used for friendly AlertMessage
   // returns true if the dataSource is empty
-  _noRowData () {
+  noRowData () {
     return this.state.dataSource.getRowCount() === 0
   }
 
-  _renderHeader (data, sectionID) {
+  renderHeader (data, sectionID) {
     switch (sectionID) {
       case 'first':
         return <Text style={styles.boldLabel}>First Section</Text>
@@ -120,11 +120,11 @@ class ListviewSectionsExample extends React.Component {
     return (
       <View style={styles.container}>
         <ListView
-          renderSectionHeader={this._renderHeader}
+          renderSectionHeader={this.renderHeader}
           contentContainerStyle={styles.listContent}
           dataSource={this.state.dataSource}
           onLayout={this.onLayout}
-          renderRow={this._renderRow}
+          renderRow={this.renderRow}
           enableEmptySections
         />
       </View>
