--- a/templates/listview.ejs
+++ b/templates/listview.ejs
@@ -52,13 +52,13 @@ class <%= props.name %> extends React.Component {
 
   /* ***********************************************************
   * STEP 3
-  * `_renderRow` function -How each cell/row should be rendered
+  * `renderRow` function -How each cell/row should be rendered
   * It's our best practice to place a single component here:
   *
   * e.g.
     return <MyCustomCell title={rowData.title} description={rowData.description} />
   *************************************************************/
-  _renderRow (rowData) {
+  renderRow (rowData) {
     return (
       <View style={styles.row}>
         <Text style={styles.boldLabel}>{rowData.title}</Text>
@@ -87,12 +87,12 @@ class <%= props.name %> extends React.Component {
 
   // Used for friendly AlertMessage
   // returns true if the dataSource is empty
-  _noRowData () {
+  noRowData () {
     return this.state.dataSource.getRowCount() === 0
   }
 
   // Render a footer.
-  _renderFooter = () => {
+  renderFooter = () => {
     return (
       <Text> - Footer - </Text>
     )
@@ -104,8 +104,8 @@ class <%= props.name %> extends React.Component {
         <ListView
           contentContainerStyle={styles.listContent}
           dataSource={this.state.dataSource}
-          renderRow={this._renderRow}
-          renderFooter={this._renderFooter}
+          renderRow={this.renderRow}
+          renderFooter={this.renderFooter}
           enableEmptySections
           pageSize={15}
         />
