--- a/templates/saga.ejs
+++ b/templates/saga.ejs
@@ -1,29 +1,53 @@
-/* ***********************************************************
-* A short word on how to use this automagically generated file.
-* We're often asked in the ignite gitter channel how to connect
-* to a to a third party api, so we thought we'd demonstrate - but
-* you should know you can use sagas for other flow control too.
-*
-* Other points:
-*  - You'll need to add this saga to sagas/index.js
-*  - This template uses the api declared in sagas/index.js, so
-*    you'll need to define a constant in that file.
-*************************************************************/
-
 import { call, put } from 'redux-saga/effects'
 import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
 
 export function * get<%= props.name %> (api, action) {
-  const { data } = action
+  const { <%= camelCase(props.name) %>Id } = action
   // make the call to the api
-  const response = yield call(api.get<%= camelCase(props.name) %>, data)
+  const response = yield call(api.get<%= props.name %>, <%= camelCase(props.name) %>Id)
 
   // success?
   if (response.ok) {
-    // You might need to change the response here - do this with a 'transform',
-    // located in ../Transforms/. Otherwise, just pass the data back from the api.
     yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>Success(response.data))
   } else {
-    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>Failure())
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>Failure(response.data))
+  }
+}
+
+export function * get<%= props.name %>s (api) {
+  // make the call to the api
+  const response = yield call(api.get<%= props.name %>s)
+
+  // success?
+  if (response.ok) {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>AllSuccess(response.data))
+  } else {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>AllFailure(response.data))
+  }
+}
+
+export function * update<%= props.name %> (api, action) {
+  const { <%= camelCase(props.name) %> } = action
+  // make the call to the api
+  const response = yield call(api.update<%= props.name %>, <%= camelCase(props.name) %>)
+
+  // success?
+  if (response.ok) {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>UpdateSuccess(response.data))
+  } else {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>UpdateFailure(response.data))
+  }
+}
+
+export function * delete<%= props.name %> (api, action) {
+  const { <%= camelCase(props.name) %>Id } = action
+  // make the call to the api
+  const response = yield call(api.delete<%= props.name %>, <%= camelCase(props.name) %>Id)
+
+  // success?
+  if (response.ok) {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>DeleteSuccess())
+  } else {
+    yield put(<%= props.name %>Actions.<%= camelCase(props.name) %>DeleteFailure(response.data))
   }
 }
