--- a/templates/redux.ejs
+++ b/templates/redux.ejs
@@ -35,7 +35,7 @@ export const INITIAL_STATE = Immutable({
     errorOne: null,
     errorAll: null,
     errorUpdating: null,
-    errorUDeleting: null
+    errorDeleting: null
 })
 
 /* ------------- Reducers ------------- */
