--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,22 +21,22 @@
     "git-hook": "npm run lint -s && npm test -s"
   },
   "dependencies": {
-    "apisauce": "^0.10.0",
-    "format-json": "^1.0.3",
-    "lodash": "^4.17.2",
-    "querystringify": "0.0.4",
-    "ramda": "^0.23.0",
-    "react-native-config": "^0.2.1",
-    "react-native-device-info": "^0.10.0",
-    "react-native-drawer": "^2.3.0",
-    "react-native-router-flux": "^3.37.0",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.1.0",
-    "redux-saga": "^0.14.3",
+    "apisauce": "0.11.0",
+    "format-json": "1.0.3",
+    "lodash": "4.17.4",
+    "querystringify": "1.0.0",
+    "ramda": "0.23.0",
+    "react-native-config": "0.3.1",
+    "react-native-device-info": "0.10.2",
+    "react-native-drawer": "2.3.0",
+    "react-native-router-flux": "3.38.0",
+    "react-redux": "5.0.4",
+    "redux": "3.6.0",
+    "redux-persist": "4.6.0",
+    "redux-saga": "0.14.6",
     "reduxsauce": "0.4.1",
-    "seamless-immutable": "^7.0.1",
-    "tcomb-form-native": "^0.6.7"
+    "seamless-immutable": "7.1.2",
+    "tcomb-form-native": "0.6.7"
   },
   "devDependencies": {
     "ava": "^0.18.2",
