--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -39,22 +39,22 @@
     "tcomb-form-native": "0.6.7"
   },
   "devDependencies": {
-    "ava": "^0.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "buffer": "^5.0.5",
-    "enzyme": "^2.6.0",
-    "mockery": "^2.0.0",
-    "husky": "^0.13.1",
-    "nyc": "^10.1.2",
-    "react-addons-test-utils": "^15.3.1",
-    "react-dom": "^15.4.0",
-    "react-native-mock": "^0.3.1",
-    "reactotron-apisauce": "^1.7.0",
-    "reactotron-react-native": "^1.7.0",
-    "reactotron-redux": "^1.7.0",
-    "reactotron-redux-saga": "^1.7.0",
-    "snazzy": "^6.0.0",
+    "ava": "0.18.2",
+    "babel-eslint": "7.1.1",
+    "babel-preset-es2015": "6.18.0",
+    "buffer": "5.0.5",
+    "enzyme": "2.6.0",
+    "mockery": "2.0.0",
+    "husky": "0.13.1",
+    "nyc": "10.1.2",
+    "react-addons-test-utils": "15.3.1",
+    "react-dom": "15.4.0",
+    "react-native-mock": "0.3.1",
+    "reactotron-apisauce": "1.7.0",
+    "reactotron-react-native": "1.7.0",
+    "reactotron-redux": "1.7.0",
+    "reactotron-redux-saga": "1.7.0",
+    "snazzy": "6.0.0",
     "standard": "8.6.0"
   },
   "ava": {
