--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -26,6 +26,7 @@
     "lodash": "4.17.4",
     "querystringify": "1.0.0",
     "ramda": "0.23.0",
+    "react": "15.4.1",
     "react-native-config": "0.3.1",
     "react-native-device-info": "0.10.2",
     "react-native-drawer": "2.3.0",
@@ -43,13 +44,14 @@
     "babel-eslint": "7.1.1",
     "babel-preset-es2015": "6.18.0",
     "buffer": "5.0.5",
-    "enzyme": "2.6.0",
+    "enzyme": "2.8.2",
     "mockery": "2.0.0",
     "husky": "0.13.1",
     "nyc": "10.1.2",
-    "react-addons-test-utils": "15.3.1",
-    "react-dom": "15.4.0",
+    "react-addons-test-utils": "15.4.1",
+    "react-dom": "15.4.1",
     "react-native-mock": "0.3.1",
+    "react-test-renderer": "15.4.1",
     "reactotron-apisauce": "1.7.0",
     "reactotron-react-native": "1.7.0",
     "reactotron-redux": "1.7.0",
