include entity generate option in generated app

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -1,5 +1,8 @@
 {
   "createdWith": "<%= props.igniteVersion %>",
   "examples": "classic",
-  "askToOverwrite": true
+  "askToOverwrite": true,
+  "generators": {
+    "entity": "ignite-jhipster"
+  }
 }
