load entity config from jhipster project
Fix #10

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -1,6 +1,7 @@
 {
   "createdWith": "<%= props.igniteVersion %>",
   "examples": "classic",
+  "jhipsterDirectory": "../",
   "askToOverwrite": true,
   "generators": {
     "entity": "ignite-jhipster"
