--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -24,10 +24,11 @@ export function * login (api, { username, password }) {
   if (response.ok) {
     <%_ if (props.authType === 'jwt') { _%>
     yield call(api.setAuthToken, response.data.id_token)
+    yield put(LoginActions.loginSuccess(response.data.id_token))
     <%_} else if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
     yield call(api.setAuthToken, response.data.access_token)
+    yield put(LoginActions.loginSuccess(response.data))
     <%_ } _%>
-    yield put(LoginActions.loginSuccess(response.data.id_token))
     yield put({ type: 'RELOGIN_OK' })
   } else {
     yield put(LoginActions.loginFailure('WRONG'))
